# Next
- Implements keyboard navigation for list views
- Fixes scrollwheel volume change not reaching min or max value
- Fixes low volume showing wrong volume icon
- Fixes to prevent volume slider jankiness

# 5.5.1

- Fixes widget locking-up while loading covers from songs with no albumartist

# 5.5

- Fixes widget layout jumping around between empty queue and playing 
- Widget will no longer adjust its size to show full info text
- Minor UI tweaks

# 5.4

- Sorts internally instead of relying of the filesystem sorting
- Fixes volume slider jankiness
- Only set the "host" config on mpc commands if it one is provided in the config
- Reorganized widget configuration sections

# 5.3

- Increases cursor visibility on currently paying item
- Adds page titles to some views
- Fixes keyboard navigation not working when switching to Queue view
- Fixes missing icons in breeze icon theme
- Better handling of missing songs in playlists
- Opens the app window a little bit taller if possible
- Layout tweaks

# 5.2

- Adds "action toolbar" on top of song-lists
- Replaces dedicated checkboxes with marker on cover
- Adds some keyboard navigation to the Queue:
    - Cursor position is shown by moving indicator between cover and text
    - Up/Down keys to move up and down
    - Up/Down+Shift to select items
    - Space to toggle selection downwards
    - Shift-D to clear the selection
    - B to select the album at the cursor (Shift+B for deselect)
    - Enter to play the selected song
- Adds some mouse actions to the Queue:
    - Single-Click to select a single song
    - Shift+Single-Click to select a range
    - Single-Click+Ctrl to select or deselect a single song
- Follow-mode changes:
    - Toggling Follow-mode manually moved to Shift+F
    - F jumps to the currently playing song
    - Making changes to the Queue disables Follow-mode for a short time
    - Fixes showing the same song with duplicate song in the Queue
- Adds Right-Click menu in Artists for whole artist-row