@@ -3,6 +3,7 @@
 - Fixes scrollwheel volume change not reaching min or max value
 - Fixes low volume showing wrong volume icon
 - Fixes to prevent volume slider jankiness
+- Fixes widget layout sometimes resetting its size
 
 # 5.5.1
 
